@@ -137,7 +137,10 @@ Core and Builtins
 Library
 -------
 
-- Issue #1696199:  Add collections.Counter() for rapid and convenient
+- Issue #1162154: inspect.getmembers() now skips attributes that raise
+  AttributeError, e.g. a __slots__ attribute which has not been set.
+
+- Issue #1696199: Add collections.Counter() for rapid and convenient
   counting.
 
 - Issue #3860: GzipFile and BZ2File now support the context manager protocol.
